--- a/Weekly-Schedule/chen/index.html
+++ b/Weekly-Schedule/chen/index.html
@@ -295,7 +295,7 @@
 
                 const downloadLink = document.getElementById('download1');
                 downloadLink.href = canvas1.toDataURL('image/jpeg', 0.9);
-                downloadLink.download = 'duby-schedule.jpg';
+                downloadLink.download = 'chen-schedule.jpg';
                 downloadLink.style.display = 'block';
                 updateProgress(100, '完成！');
             } catch (error) {
